@@ -1,3 +1,15 @@
+2003-05-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* ld-elfvsb/common.c: New file.
+	* ld-elfvsb/elfvsb.exp: Add common.
+
+2003-05-20  H.J. Lu <hongjiu.lu@intel.com>
+
+	* ld-elfvsb/sh3.c: New file.
+	* ld-elfvsb/test.c: Likewise.
+
+	* ld-elfvsb/elfvsb.exp: Add new weak hidden symbol tests.
+
 2003-05-15  H.J. Lu <hongjiu.lu@intel.com>
 
 	* config/default.exp (gcc_ld_flag): New. Make the newly built
